# Agentvault

./: .gitignore  README.md  project.md
contracts/agentvault-tee/: Cargo.toml  README.md
contracts/agentvault-tee/src/: lib.rs  vault.rs
contracts/agentvault-tee/wit/: world.wit
frontend/: .env.example  .gitignore  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/api/agentvault/approval/: route.ts
frontend/app/api/agentvault/session/: route.ts
frontend/app/api/audit/: route.ts
frontend/app/api/terminal3/seed-plan/: route.ts
frontend/app/api/terminal3/status/: route.ts
frontend/app/api/vault/request/: route.ts
frontend/app/api/vault/revoke/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/logs/: page.tsx
frontend/app/policies/: page.tsx
frontend/app/terminal3/: page.tsx
frontend/app/vault/: page.tsx
frontend/components/: agent-interface.tsx  devex-section.tsx  glitch-background.tsx  intro-animation.tsx  live-agent-feed.tsx  mobile-nav.tsx  reveal-text.tsx  stacking-agent-cards.tsx
frontend/components/agentvault/: page-shell.tsx  status-chip.tsx  terminal3-diagnostics.tsx  vault-console.tsx
frontend/lib/agentvault/: audit-store.ts  console-session-client.ts  credential-store.ts  data.ts  mongo.ts  policy-engine.ts  security.ts  types.ts
frontend/lib/terminal3/: client.ts
frontend/public/: site.webmanifest
frontend/scripts/: terminal3-setup.mjs
